# CeNTREX-TlF-julia-extension

./: LICENSE  README.md  pyproject.toml
centrex_tlf_julia_extension/: __init__.py
centrex_tlf_julia_extension/lindblad_julia/: __init__.py  generate_julia_code.py  julia_common.jl  ode_parameters.py  utils_julia.py  utils_setup.py  utils_solver.py  utils_solver_progress.py
examples/: P2 transition with microwave to J1 and J2 laser off before microwaves.ipynb  P2 transition with microwave to J1 and J2.ipynb  P2 transition with microwave to J1.ipynb  Q1 multiple transitions.ipynb  Q1 transitions with off-resonant microwaves to J0.ipynb  Q1 with sigma and x polarization.ipynb  Q1 with sigma and z polarization.ipynb  R0 F1 F1=1_2 polarization switching resonant vs square.ipynb  R0 transition with microwave to J1.ipynb  R1 all transitions.ipynb  R1 transition detection rc pol switching.ipynb  R1 transition detection rc.ipynb  R1 transition with microwave to J2.ipynb  R1_jianhui.ipynb  R2 transition EQL testing trajectories.ipynb  R2 transition EQL testing.ipynb  R2 transition in electric field.ipynb  R2 transition.ipynb  Rotational Cooling.ipynb  rc transition P(2) F1=3_2 F=1 J=1 to J=2 microwaves.ipynb  rc transition laser only P(2) F1=3_2 F=1.ipynb  rc transition laser only P(2) F1=3_2 F=2.ipynb  results_scan_lowervz.pkl  results_scan_uppervz.pkl  stirap_J0_J2.ipynb
examples/detection efficiency rotational cooling/: R0 F1 detection.ipynb  R1 F3 detection.ipynb  R1 F3 detection.pkl
