[tool.poetry]
name = "centrex-tlf-julia-extension"
version = "0.1.0"
description = "Extension for centrex-tlf to run OBE simulations in Julia"
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "centrex_tlf_julia_extension"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
julia = "^0.6.0"
psutil = "^5.9.4"
centrex-tlf = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "julia",
    "psutil"
]
ignore_missing_imports = true